@@ -188,3 +188,4 @@ gmail_problem_title=Podpora pro Gmail nejspíš nefunguje.
 gmail_problem_detail=Podrobnosti
 gmail_problem_status=Stavová stránka
 gmail_problem_close=Zavřít
+key_is_not_trusted=!Key isen\'t trusted!
