@@ -188,3 +188,4 @@ gmail_problem_title=Understøttelse af Gmails er i uorden.
 gmail_problem_detail=Detaljer
 gmail_problem_status=Statusside
 gmail_problem_close=Luk
+key_is_not_trusted=!Key isen\'t trusted!
