@@ -188,3 +188,4 @@ gmail_problem_title=Die GMail Unterstützung scheint kaputt zu sein
 gmail_problem_detail=Details
 gmail_problem_status=Statusseite
 gmail_problem_close=Schließen
+key_is_not_trusted=!Key isen\'t trusted!
