@@ -7,11 +7,11 @@ decryptFailedPassword=Le déchiffrement a échoué car le mot de passe est incor
 passwordDialogEnterPrivateKey=Entrez le mot de passe de votre clé privée :
 youMustEnterPassword=Vous devez entrer un mot de passe !
 choosePublicKeyTitle=FireGPG - clé publique
-choosePublicKeyDescription=Sélectionner la clé publique : 
+choosePublicKeyDescription=Sélectionner la clé publique :
 selfTestFailled=Erreur : GPG n'est pas accessible, vérifiez qu'il est installé et que le chemin (dans les options) est correct.
 showTextDefaultTitle=FireGPG - résultat
 showTextDefaultDescription=Le résultat de l'opération :
-importFailed=Échec de l'importation. 
+importFailed=Échec de l'importation.
 importOk=Importation réussie.
 noData=Votre sélection est vide. Veuillez sélectionner un texte.
 noPass=Entrez un mot de passe.
@@ -31,7 +31,7 @@ exportFailed=Erreur inconnue. L'exportation a échoué.
 editorTitle=L'Éditeur de FireGPG.
 editorDescription=Vous pouvez traiter un texte ici.
 whatIsNewTitle=Nouveautés de FireGPG
-whatIsNewDescription=Voici les nouveautés de FireGPG (en anglais) (un ping anonyme a été envoyé à l'équipe de FireGPG pour des statistiques) : 
+whatIsNewDescription=Voici les nouveautés de FireGPG (en anglais) (un ping anonyme a été envoyé à l'équipe de FireGPG pour des statistiques) :
 newVersionAlert=Une nouvelle version de FireGPG est disponible, voulez-vous effectuer la mise à jour maintenant ?
 turn-off-updates-w1=Attention ! Vous ne devriez pas désactiver les mises à jour automatiques de FireGPG si vous ne pouvez pas mettre à jour FireGPG avec Firefox ou si vous ne vérifiez pas régulièrement la présence de nouvelles versions de vos plugins !
 turn-off-updates-w2=Êtes-vous sûr(e) ? Nous recommandons de ne pas désactiver cette option qui aide à utuliser toujours la dernière version de FireGPG, encore en version bêta et qui pourrait présenter des problèmes de sécurité !
@@ -64,13 +64,13 @@ verifFailedUnknownKey=signé avec une clé inconnue.
 show-original=Afficher l'original
 hide-original=Cacher l'original
 verifSuccess=Cette signature est valide. Elle appartient à
-validSignInCrypt=Une signature valide a été trouvée, avec la clé de 
+validSignInCrypt=Une signature valide a été trouvée, avec la clé de
 GMailCLS=Signer en clair
 GMailCLSS=Signer en clair et envoyer
 symetricalPass=Veuillez entrez un mot de passe pour le chiffrement symétrique
 private-key-block=Clé PGP privée
 private-key-block-message=Ceci est une clé privée. Pour des raisons de sécurité FireGPG n'importe pas de clé privées. Si vous avez besoin d'importer cette clé, cliquez sur &quot;Afficher l'original&quot; et importez-la en utilisant votre gestionnaire de clés.
-fireftp_warning=Il y a un problème avec la bibliothèque IPC. Elle a été chargée avec succès, mais il semble qu'une ancienne version est déjà installée (FireFTP est installé ?). Si vous cliquez sur 'Oui', FireGPG va essayer d'accéder à l'ancienne bibliothèque, mais cela peut conduire à un crash de Firefox. Notez que si vous êtes sous MacOS, c'est normal, cliquez juste sur 'Oui'. Voulez-vous continuer ? Vous pourrez changer ces options plus tard dans les options. 
+fireftp_warning=Il y a un problème avec la bibliothèque IPC. Elle a été chargée avec succès, mais il semble qu'une ancienne version est déjà installée (FireFTP est installé ?). Si vous cliquez sur 'Oui', FireGPG va essayer d'accéder à l'ancienne bibliothèque, mais cela peut conduire à un crash de Firefox. Notez que si vous êtes sous MacOS, c'est normal, cliquez juste sur 'Oui'. Voulez-vous continuer ? Vous pourrez changer ces options plus tard dans les options.
 fireftp_pass=Parfait ! Si vous lisez ce message, Firefox n'a pas crashé. J'utiliserai ultérieurement cette manière d'accéder à GnuPG.
 noipc2=Erreur : FireGPG ne peut pas accéder à la librairie IPC. Si vous utilisez Firefox 2 vous devez le mettre à jour en version 3. Si vous n'êtes pas sous Windows, Linux ou MacOS (Intel), vous devez compiler vous-même la librairie IPC, veuillez suivre les instructions sur la page de téléchargement de FireGPG.
 keySync=Clés synchronisées avec le serveur !
@@ -94,9 +94,9 @@ oldPassword=Ancien mot de passe
 newPassword=Nouveau mot de passe
 newPassword2=Répétez le nouveau mot de passe
 need-name=Veuillez entrer un nom !
-need-email=Veuillez entrer un courriel ! 
+need-email=Veuillez entrer un courriel !
 need-password=Veuillez entrer un mot de passe !
-need-expire-date=Mauvaise valeur pour l'expiration ! 
+need-expire-date=Mauvaise valeur pour l'expiration !
 keygenerated=Clé générée !
 sure-delete-key=!!! Êtes-vous sûr(e) ? Vous êtes sur le point de SUPPRIMER une clé !!!
 key-deleted=Clé supprimée !
@@ -104,7 +104,7 @@ unknow-error=Erreur inconnue...
 sure-revoke-key=Êtes-vous sûr(e) ? Votre clé sera révoquée !
 keyrevoked=Clé révoquée !
 nameTooShort=Le nom est trop court
-wrongEmail=Courriel non valide 
+wrongEmail=Courriel non valide
 entername=Veuillez entrer un nom (au moins 5 caractères !)
 enteremail=Entrez une adresse courriel VALIDE
 entercomment=Entrez un commentaire (optionnel)
@@ -123,7 +123,7 @@ GMailMailWasDecrypted=Courriel déchiffré !
 GMailMailWasNotDecrypted=Courriel non déchiffré
 GmailBigMail=FireGPG essaie de télécharger un courriel de grande taille. Voulez-vous continuer ?
 GmailI=Inline
-betterToUsePlainText=Il vaut mieux utiliser &quot;Texte brut&quot; pour les options que vous avez sélectionnées, voulez-vous convertir votre texte ? Dans tous les cas il sera converti plus tard par FireGPG. 
+betterToUsePlainText=Il vaut mieux utiliser &quot;Texte brut&quot; pour les options que vous avez sélectionnées, voulez-vous convertir votre texte ? Dans tous les cas il sera converti plus tard par FireGPG.
 GmailCreatingMail=FireGPG construit le courriel...
 GmailErrorMail={FireGPG} Erreur : le courriel n'a pas été envoyé !
 GmailSendingMail=FireGPG envoie le courriel...
@@ -148,7 +148,7 @@ noDataFromServer=Pas de données depuis le serveur. Essayez de rafraîchir la pa
 emailDecrypted=Ce courriel a été déchiffré.
 decryptedMail=Courriel déchiffré
 partDecrypted=Partie déchifrée
-goodSignFrom=Signature correcte de 
+goodSignFrom=Signature correcte de
 signedMail=Courriel signé
 partSigned=Partie signée
 nothingFound=FireGPG a vérifié ce courriel mais n'a pas trouvé de signature ou de contenu chiffré
@@ -164,7 +164,7 @@ notencrypted-message=PGP message PAS chiffré (données blindées)
 destinationFile=Sélectionnez le fichier de destination (pas le même !):
 sourceFile=Sélectionnez le fichier de destination:
 operationOnFileDone=Opération sur le fichier terminée !
-signUseDefault=Voulez-vous utiliser nomdufichier.sig comme destination (recommandé) ? Cela écrasera un .sig existant. 
+signUseDefault=Voulez-vous utiliser nomdufichier.sig comme destination (recommandé) ? Cela écrasera un .sig existant.
 formAndToSame=Les fichier source et de destination sont les mêmes !
 sigFoundSelectAFile=.sig pas trouvé, voulez-vous le sélectionner ?
 notComputed=Pas encore calculé
@@ -188,3 +188,4 @@ gmail_problem_title=Le support de Gmail semble cassé.
 gmail_problem_detail=Détails
 gmail_problem_status=Page de statut
 gmail_problem_close=Fermer
+key_is_not_trusted=!Key isen't trusted!
