@@ -188,3 +188,4 @@ gmail_problem_title=Hai problemas co soporte a Gmail.
 gmail_problem_detail=Detalles
 gmail_problem_status=Páxina de estado
 gmail_problem_close=Pechar
+key_is_not_trusted=!Key isen\'t trusted!
