@@ -188,3 +188,4 @@ gmail_problem_title=
 gmail_problem_detail=Dettagli
 gmail_problem_status=Pagina di stato
 gmail_problem_close=Chiudi
+key_is_not_trusted=!Key isen\'t trusted!
