@@ -188,3 +188,4 @@ gmail_problem_title=Gmailサポートは壊れていると考えられます。
 gmail_problem_detail=詳細
 gmail_problem_status=ステータスページ
 gmail_problem_close=閉じる
+key_is_not_trusted=!Key isen\'t trusted!
